Fixed sizing of images in overflow

--- a/src/styles/_poses.scss
+++ b/src/styles/_poses.scss
@@ -5,22 +5,31 @@
   display: block;
 }
 
+$vertical-offset: 4rem;
+
+@mixin pose-height {
+  height: calc(100vh - #{$header-size + $footer-size});
+
+  @include large-screen {
+    height: calc(100vh - #{$header-size + $footer-size} - #{2 * $vertical-offset});
+  }
+}
+
 yf-poses {
   @extend %pose-base;
 
   max-width: $width-cap;
   margin: 0 auto;
   background: #fff;
-  height: calc(100vh - #{$header-size + $footer-size});
   display: flex;
   align-items: center;
 
   @include large-screen {
-    $vertical-offset: 4rem;
     margin-top: $vertical-offset;
-    height: calc(100vh - #{$header-size + $footer-size} - #{2 * $vertical-offset});
     @include raised-2;
   }
+
+  @include pose-height;
 }
 
 .poses-slider {
@@ -44,13 +53,16 @@ yf-poses {
 yf-pose {
   @extend %pose-base;
   text-align: center;
+
+  @include pose-height;
+  overflow: hidden;
 }
 
 .pose-title {
   font-size: 2rem;
   line-height: 1.25;
   font-weight: 500;
-  margin: 1rem 0;
+  margin: 2rem 0 1rem;
 }
 
 .pose-sanskrit {
@@ -63,4 +75,6 @@ yf-pose {
 .pose-image {
   max-width: 100%;
   height: auto;
+  object-fit: contain;
+  max-height: 50vh;
 }
